add style and sections for heading and buttons

--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock paper scissors</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="myscripts.js" defer></script>
 </head>
 <body>
-    <script src="myscripts.js"></script>
+    <div class="hero">
+        <h1>Rock Paper Scissors</h1>
+        <p>Challenge the computer in this classic game. Choose your move!</p>
+    </div>
+
+    <div class="buttonbox">
+        <button class="Rockbutton">Rock</button>
+        <button class="Paperbutton">Paper</button>
+        <button class="Scissorsbutton">Scissors</button>
+    </div>
+    
 </body>
 </html>
