Add score board and style

--- a/index.html
+++ b/index.html
@@ -9,8 +9,26 @@
 </head>
 <body>
     <div class="hero">
+        <div class="TitleRock">      
         <h1>Rock Paper Scissors</h1>
         <p>Challenge the computer in this classic game. Choose your move!</p>
+        </div>
+        <div class="scoreBox">
+        <div class="Score">
+            <h3> Your score</h2>
+            <h2> 1 </h3>
+        </div>
+        <div class="Score ">
+            <h3> Computer Score</h2>
+            <h2> 1 </h3>
+        </div>
+        
+        </div>
+    </div>
+
+    <div class ="Action">
+        <img src=""> 
+        <img src="">
     </div>
 
     <div class="buttonbox">
