add action section

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/4fcd9c3395.js" crossorigin="anonymous"></script>
     <title>Rock paper scissors</title>
     <link rel="stylesheet" href="style.css">
     <script src="myscripts.js" defer></script>
@@ -27,8 +28,10 @@
     </div>
 
     <div class ="Action">
-        <img src=""> 
-        <img src="">
+        <div class="imgbox"></div>
+        <i class="fa-solid fa-hand-back-fist"></i> 
+        <div class="imgbox"></div>
+        <i class="fa-solid fa-hand"></i>
     </div>
 
     <div class="buttonbox">
@@ -39,3 +42,7 @@
     
 </body>
 </html>
+<!--wair = <i class="fa-solid fa-hand-back-fist"></i> -->
+<!--Rock = <i class="fa-solid fa-hand-back-fist"></i> -->
+<!--Paper = <i class="fa-solid fa-hand"></i> -->
+<!--Scissors = <i class="fa-solid fa-hand-scissors"></i> -->
